Adjust info icon and text spacing, add anchor els to nav

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <div class="page-container">
     <header class="header">
       <div class="header-notice">
-        <a href="" class="header-notice__link">
+        <a class="header-notice__link">
           <svg class="header-notice__icon" width="24" height="24" viewBox="0 0 24 24" fill="none"
             xmlns="http://www.w3.org/2000/svg">
             <path
@@ -32,17 +32,17 @@
           <span>オンラインストアの在庫確認方法はこちら</span>
         </a>
       </div>
-      <div class="header-nav">
+      <nav class="header-nav">
         <img class="header-nav__logo" src="assets/images/ikea-logo.f7d9229f806b59ec64cb.svg"></img>
         <div class="header-nav__menu">
-          <img class="header-nav__btn header-nav__btn--profile" src="assets/icons/user-svgrepo-com.svg"></img>
-          <img class="header-nav__btn header-nav__btn--favs" src="assets/icons/heart-svgrepo-com.svg"></img>
-          <img class="header-nav__btn header-nav__btn--basket" src="assets/icons/shopping-cart-svgrepo-com.svg"></img>
+          <a><img class="header-nav__btn" src="assets/icons/user-svgrepo-com.svg"></img></a>
+          <a><img class="header-nav__btn" src="assets/icons/heart-svgrepo-com.svg"></img></a>
+          <a><img class="header-nav__btn" src="assets/icons/shopping-cart-svgrepo-com.svg"></img></a>
           <button class="header-nav__btn">
             <img class="header-nav__btn header-nav__btn--hamburger" src="assets/icons/text-align-justify-svgrepo-com.svg">
           </button>
         </div>
-      </div>
+      </nav>
       <div class="header-search">
         <div class="search-container">
           <img class="search-container__icon search-container__icon--search" src="assets/icons/search-svgrepo-com.svg">
