Change nav link classes

--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
       <nav class="header-nav">
         <img class="header-nav__logo" src="assets/images/ikea-logo.f7d9229f806b59ec64cb.svg"></img>
         <div class="header-nav__menu">
-          <a><img class="header-nav__btn" src="assets/icons/user-svgrepo-com.svg"></img></a>
-          <a><img class="header-nav__btn" src="assets/icons/heart-svgrepo-com.svg"></img></a>
-          <a><img class="header-nav__btn" src="assets/icons/shopping-cart-svgrepo-com.svg"></img></a>
+          <a><img class="header-nav__icon" src="assets/icons/user-svgrepo-com.svg"></img></a>
+          <a><img class="header-nav__icon" src="assets/icons/heart-svgrepo-com.svg"></img></a>
+          <a><img class="header-nav__icon" src="assets/icons/shopping-cart-svgrepo-com.svg"></img></a>
           <button class="header-nav__btn">
-            <img class="header-nav__btn header-nav__btn--hamburger" src="assets/icons/text-align-justify-svgrepo-com.svg">
+            <img  class="header-nav__icon" src="assets/icons/text-align-justify-svgrepo-com.svg">
           </button>
         </div>
       </nav>
