--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
             xmlns="http://www.w3.org/2000/svg">
             <path
               d="M11 10.9794C11 10.4271 11.4477 9.97937 12 9.97937C12.5523 9.97937 13 10.4271 13 10.9794V16.9794C13 17.5317 12.5523 17.9794 12 17.9794C11.4477 17.9794 11 17.5317 11 16.9794V10.9794Z"
-              fill="currentColor" />
+              fill="white" />
             <path
               d="M12 6.05115C11.4477 6.05115 11 6.49886 11 7.05115C11 7.60343 11.4477 8.05115 12 8.05115C12.5523 8.05115 13 7.60343 13 7.05115C13 6.49886 12.5523 6.05115 12 6.05115Z"
-              fill="currentColor" />
+              fill="white" />
             <path fill-rule="evenodd" clip-rule="evenodd"
               d="M12 2C6.47715 2 2 6.47715 2 12C2 17.5228 6.47715 22 12 22C17.5228 22 22 17.5228 22 12C22 6.47715 17.5228 2 12 2ZM4 12C4 16.4183 7.58172 20 12 20C16.4183 20 20 16.4183 20 12C20 7.58172 16.4183 4 12 4C7.58172 4 4 7.58172 4 12Z"
-              fill="currentColor" />
+              fill="white" />
           </svg>
-          <span>オンラインストアの在庫確認方法はこちら</span>
+          <span class="header-notice__text">オンラインストアの在庫確認方法はこちら</span>
         </a>
       </div>
       <nav class="header-nav">
@@ -45,9 +45,9 @@
       </nav>
       <div class="header-search">
         <div class="search-container">
-          <img class="search-container__icon search-container__icon--search" src="assets/icons/search-svgrepo-com.svg">
+          <img class="search-container__icon" src="assets/icons/search-svgrepo-com.svg">
           <input class="search-container__input" type="search" placeholder="何を探していますか？">
-          <img class="search-container__icon search-container__icon--photo" src="assets/icons/camera-svgrepo-com.svg">
+          <a><img class="search-container__icon" src="assets/icons/camera-svgrepo-com.svg"></a>
         </div>
       </div>
       <a class="header-stores">
