Add header nav hover styles

--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
         </a>
       </div>
       <nav class="header-nav">
-        <img class="header-nav__logo" src="assets/images/ikea-logo.f7d9229f806b59ec64cb.svg"></img>
+        <a class="header-nav__logo-wrapper"><img class="header-nav__logo" src="assets/images/ikea-logo.f7d9229f806b59ec64cb.svg"></img></a>
         <div class="header-nav__menu">
-          <a><img class="header-nav__icon" src="assets/icons/user-svgrepo-com.svg"></img></a>
-          <a><img class="header-nav__icon" src="assets/icons/heart-svgrepo-com.svg"></img></a>
-          <a><img class="header-nav__icon" src="assets/icons/shopping-cart-svgrepo-com.svg"></img></a>
-          <button class="header-nav__btn">
+          <a class="header-nav__icon-wrapper"><img class="header-nav__icon" src="assets/icons/user-svgrepo-com.svg"></img></a>
+          <a class="header-nav__icon-wrapper"><img class="header-nav__icon" src="assets/icons/heart-svgrepo-com.svg"></img></a>
+          <a class="header-nav__icon-wrapper"><img class="header-nav__icon" src="assets/icons/shopping-cart-svgrepo-com.svg"></img></a>
+          <button class="header-nav__icon-wrapper">
             <img  class="header-nav__icon" src="assets/icons/text-align-justify-svgrepo-com.svg">
           </button>
         </div>
