Add hover events for photo icon

--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
         <div class="search-container">
           <img class="search-container__icon" src="assets/icons/search-svgrepo-com.svg">
           <input class="search-container__input" type="search" placeholder="何を探していますか？">
-          <a><img class="search-container__icon" src="assets/icons/camera-svgrepo-com.svg"></a>
+          <a class="search-container__icon-wrapper"><img class="search-container__icon" src="assets/icons/camera-svgrepo-com.svg"></a>
+          <div class="search-container__tooltip">写真でイケアの商品を検索</div>
         </div>
       </div>
       <a class="header-stores">
@@ -63,6 +64,7 @@
     <footer class="footer"></footer>
     <!-- <img id="iphone-se-background" src="assets/images/www.ikea.com_jp_en_(iPhone SE).png" alt=""> -->
   </div>
+  <script src="main.js"></script>
 </body>
 
 </html>
