--- a/index.html
+++ b/index.html
@@ -11,60 +11,44 @@
   <title>IKEA (CLONE)</title>
 </head>
 <body>
+  <div class="notice">
+    <a class="notice__link">
+      <svg class="notice__icon" width="24" height="24" viewBox="0 0 24 24" fill="none"
+        xmlns="http://www.w3.org/2000/svg">
+        <path
+          d="M11 10.9794C11 10.4271 11.4477 9.97937 12 9.97937C12.5523 9.97937 13 10.4271 13 10.9794V16.9794C13 17.5317 12.5523 17.9794 12 17.9794C11.4477 17.9794 11 17.5317 11 16.9794V10.9794Z"
+          fill="white" />
+        <path
+          d="M12 6.05115C11.4477 6.05115 11 6.49886 11 7.05115C11 7.60343 11.4477 8.05115 12 8.05115C12.5523 8.05115 13 7.60343 13 7.05115C13 6.49886 12.5523 6.05115 12 6.05115Z"
+          fill="white" />
+        <path fill-rule="evenodd" clip-rule="evenodd"
+          d="M12 2C6.47715 2 2 6.47715 2 12C2 17.5228 6.47715 22 12 22C17.5228 22 22 17.5228 22 12C22 6.47715 17.5228 2 12 2ZM4 12C4 16.4183 7.58172 20 12 20C16.4183 20 20 16.4183 20 12C20 7.58172 16.4183 4 12 4C7.58172 4 4 7.58172 4 12Z"
+          fill="white" />
+      </svg>
+      <span class="notice__text">オンラインストアの在庫確認方法はこちら</span>
+    </a>
+  </div>
   <header class="header">
-    <div class="header-notice">
-      <a class="header-notice__link">
-        <svg class="header-notice__icon" width="24" height="24" viewBox="0 0 24 24" fill="none"
-          xmlns="http://www.w3.org/2000/svg">
-          <path
-            d="M11 10.9794C11 10.4271 11.4477 9.97937 12 9.97937C12.5523 9.97937 13 10.4271 13 10.9794V16.9794C13 17.5317 12.5523 17.9794 12 17.9794C11.4477 17.9794 11 17.5317 11 16.9794V10.9794Z"
-            fill="white" />
-          <path
-            d="M12 6.05115C11.4477 6.05115 11 6.49886 11 7.05115C11 7.60343 11.4477 8.05115 12 8.05115C12.5523 8.05115 13 7.60343 13 7.05115C13 6.49886 12.5523 6.05115 12 6.05115Z"
-            fill="white" />
-          <path fill-rule="evenodd" clip-rule="evenodd"
-            d="M12 2C6.47715 2 2 6.47715 2 12C2 17.5228 6.47715 22 12 22C17.5228 22 22 17.5228 22 12C22 6.47715 17.5228 2 12 2ZM4 12C4 16.4183 7.58172 20 12 20C16.4183 20 20 16.4183 20 12C20 7.58172 16.4183 4 12 4C7.58172 4 4 7.58172 4 12Z"
-            fill="white" />
-        </svg>
-        <span class="header-notice__text">オンラインストアの在庫確認方法はこちら</span>
-      </a>
-    </div>
-    <nav class="header-nav">
-      <a class="header-nav__logo-wrapper"><img class="header-nav__logo"
-          src="assets/images/ikea-logo.f7d9229f806b59ec64cb.svg"></img></a>
-      <div class="header-nav__menu">
-        <a class="header-nav__icon-wrapper"><img class="header-nav__icon"
-            src="assets/icons/user-svgrepo-com.svg"></img></a>
-        <a class="header-nav__icon-wrapper"><img class="header-nav__icon"
-            src="assets/icons/heart-svgrepo-com.svg"></img></a>
-        <a class="header-nav__icon-wrapper"><img class="header-nav__icon"
-            src="assets/icons/shopping-cart-svgrepo-com.svg"></img></a>
-        <button class="header-nav__icon-wrapper">
-          <img class="header-nav__icon" src="assets/icons/text-align-justify-svgrepo-com.svg">
-        </button>
-      </div>
-    </nav>
+    <a class="header__logo-wrapper"><img class="header__logo" src="assets/images/ikea-logo.f7d9229f806b59ec64cb.svg"></img></a>
+    <button class="header__hamburger-btn"><img class="header__hamburger-icon" src="assets/icons/text-align-justify-svgrepo-com.svg"></button>
+    <a class="header-nav__link header-nav__link--profile"><img class="header-nav__icon" src="assets/icons/user-svgrepo-com.svg"></img></a>
+    <a class="header-nav__link header-nav__link--favs"><img class="header-nav__icon" src="assets/icons/heart-svgrepo-com.svg"></img></a>
+    <a class="header-nav__link header-nav__link--basket"><img class="header-nav__icon" src="assets/icons/shopping-cart-svgrepo-com.svg"></img></a>
     <div class="header-search">
-      <div class="search-container">
-        <img class="search-container__icon" src="assets/icons/search-svgrepo-com.svg">
-        <input class="search-container__input" type="search" placeholder="何を探していますか？">
-        <a class="search-container__icon-wrapper"><img class="search-container__icon" src="assets/icons/camera-svgrepo-com.svg"></a>
-        <div class="search-container__tooltip">写真でイケアの商品を検索</div>
-      </div>
+      <img class="header-search__icon" src="assets/icons/search-svgrepo-com.svg">
+      <input class="header-search__input" type="search" placeholder="何を探していますか？">
+      <a class="header-search__link"><img class="header-search__icon" src="assets/icons/camera-svgrepo-com.svg"></a>
+      <span class="header-search__tooltip">写真でイケアの商品を検索</span>
     </div>
     <a class="header-stores">
-      <div>
-        <img class="header-stores__icon" src="assets/icons/front-store-with-awning-svgrepo-com.svg">
-        <span class="header-stores__text header-stores__text--left">ストアを選択</span>
-      </div>
+      <img class="header-stores__icon" src="assets/icons/front-store-with-awning-svgrepo-com.svg">
+      <span class="header-stores__text header-stores__text--left">ストアを選択</span>
       <span class="header-stores__text header-stores__text--right">営業時間などをご確認ください</span>
     </a>
   </header>
-  <main class="main">
-  </main>
+  <main class="main"></main>
   <footer class="footer"></footer>
   <!-- <img id="iphone-se-background" src="assets/images/www.ikea.com_jp_en_(iPhone SE).png" alt=""> -->
   <script src="main.js"></script>
 </body>
-
 </html>
