--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/header/header.css">
+  <link rel="stylesheet" href="page.css">
   <title>IKEA (CLONE)</title>
 </head>
 <body>
@@ -67,12 +68,14 @@
     </nav>
   </header>
 
+  <div class="horizontal-line"></div>
+
   <main class="main">
-    <div class="horizontal-line"></div>
+
   </main>
 
   <footer class="footer"></footer>
 
-  <script src="main.js"></script>
+  <script src="/header/header.js"></script>
 </body>
 </html>
