--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/header/header.css">
-  <link rel="stylesheet" href="/campaign/campaign.css">
+  <link rel="stylesheet" href="header/header.css">
+  <link rel="stylesheet" href="campaign/campaign.css">
   <link rel="stylesheet" href="page.css">
   <title>IKEA (CLONE)</title>
 </head>
@@ -76,20 +76,20 @@
     <section class="campaign">
 
       <div class="card">
-        <img class="card__img" src="/assets/images/baking_valentines.avif">
+        <img class="card__img" src="assets/images/baking_valentines.avif">
         <div class="card__body">
           <h2 class="card__headline">バレンタインに、大切な人への気持ちを込めて</h2>
           <p class="card__subline">ベーキングカップから耐久性に優れたマフィン型まで、さまざまなベーキング用品がそろっています。手づくりのお菓子で、バレンタインにあなたの大切な人に気持ちを伝えませんか？</p>
           <a class="card__link">詳しく見る</a>
         </div>
       </div>
-      
+
     </section>
 
   </main>
 
   <footer class="footer"></footer>
 
-  <script src="/header/header.js"></script>
+  <script src="header/header.js"></script>
 </body>
 </html>
