--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="header/header.css">
-  <link rel="stylesheet" href="campaign/campaign.css">
+  <link rel="stylesheet" href="featured/featured.css">
   <link rel="stylesheet" href="page.css">
   <title>IKEA (CLONE)</title>
 </head>
@@ -73,14 +73,16 @@
 
   <main class="main">
 
-    <section class="campaign">
+    <section>
 
-      <div class="card">
-        <img class="card__img" src="assets/images/baking_valentines.avif">
-        <div class="card__body">
-          <h2 class="card__headline">バレンタインに、大切な人への気持ちを込めて</h2>
-          <p class="card__subline">ベーキングカップから耐久性に優れたマフィン型まで、さまざまなベーキング用品がそろっています。手づくりのお菓子で、バレンタインにあなたの大切な人に気持ちを伝えませんか？</p>
-          <a class="card__link">詳しく見る</a>
+      <div class="campaign">
+        <a class="campaign__banner">
+          <img class="campaign__img" src="assets/images/baking_valentines.avif">
+        </a>
+        <div class="campaign__body">
+          <h2 class="campaign__headline">バレンタインに、大切な人への気持ちを込めて</h2>
+          <p class="campaign__subline">ベーキングカップから耐久性に優れたマフィン型まで、さまざまなベーキング用品がそろっています。手づくりのお菓子で、バレンタインにあなたの大切な人に気持ちを伝えませんか？</p>
+          <a class="campaign__link">詳しく見る</a>
         </div>
       </div>
 
