--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="header/header.css">
-  <link rel="stylesheet" href="featured/featured.css">
+  <link rel="stylesheet" href="featured-campaign/featured.css">
   <link rel="stylesheet" href="page.css">
   <title>IKEA (CLONE)</title>
 </head>
@@ -74,7 +74,6 @@
   <main class="main">
 
     <section>
-
       <div class="campaign">
         <a class="campaign__banner">
           <img class="campaign__img" src="assets/images/baking_valentines.avif">
@@ -85,7 +84,10 @@
           <a class="campaign__link">詳しく見る</a>
         </div>
       </div>
+    </section>
 
+    <section>
+      
     </section>
 
   </main>
