Add scroll buttons

--- a/index.html
+++ b/index.html
@@ -92,6 +92,9 @@
     <section class="section">
       <div class="carousel">
 
+        <button  class="carousel__scroll-btn carousel__scroll-btn--left">‹</button>
+        <button class="carousel__scroll-btn carousel__scroll-btn--right">›</button>
+
         <div class="item">
           <a class="item__banner">
             <img class="item__img" src="assets/images/living_room_bike_600.jpg">
