Add scroll functionality to scroll buttons

--- a/index.html
+++ b/index.html
@@ -194,5 +194,6 @@
   <footer class="footer"></footer>
 
   <script src="header/header.js"></script>
+  <script src="campaign-carousel/campaign-carousel.js"></script>
 </body>
 </html>
