Fix scrollbar margin issue on smaller devices

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     </section>
 
     <!-- CAMPAIGN CAROUSEL -->
-    <section class="section">
+    <section class="section section--carousel">
       <div class="carousel">
 
         <button  class="carousel__scroll-btn carousel__scroll-btn--left">‹</button>
