Add background images and links

--- a/index.html
+++ b/index.html
@@ -193,14 +193,31 @@
       <div class="product-guide-carousel">
         <button  class="product-guide-carousel__scroll-btn product-guide-carousel__scroll-btn--left">‹</button>
         <button class="product-guide-carousel__scroll-btn product-guide-carousel__scroll-btn--right">›</button>
-        <div class="product-guide-item"></div>
-        <div class="product-guide-item"></div>
-        <div class="product-guide-item"></div>
-        <div class="product-guide-item"></div>
-        <div class="product-guide-item"></div>
-        <div class="product-guide-item"></div>
-        <div class="product-guide-item"></div>
-        <div class="product-guide-item"></div>
+        <div class="product-guide-item product-guide-item--solid">
+          <a class="product-guide-item__text">よりよい地球へ。毎日の暮らしから。</a>
+          <a class="product-guide-item__link product-guide-item__link--arrow">→</a>
+        </div>
+        <div class="product-guide-item product-guide-item--faucet">
+          <a class="product-guide-item__link">節水</a>
+        </div>
+        <div class="product-guide-item product-guide-item--switch">
+          <a class="product-guide-item__link">省エネルギー</a>
+        </div>
+        <div class="product-guide-item product-guide-item--pillow">
+          <a class="product-guide-item__link">健康的な生活</a>
+        </div>
+        <div class="product-guide-item product-guide-item--bins">
+          <a class="product-guide-item__link">ゴミの削減</a>
+        </div>
+        <div class="product-guide-item product-guide-item--chair">
+          <a class="product-guide-item__link">サステナブルな家具</a>
+        </div>
+        <div class="product-guide-item product-guide-item--table">
+          <a class="product-guide-item__link">サステナブルな素材</a>
+        </div>
+        <div class="product-guide-item product-guide-item--meatballs">
+          <a class="product-guide-item__link">サステナブルな食品</a>
+        </div>
       </div>
     </section>
   </main>
