Add scroll functionality for product guide carousel

--- a/index.html
+++ b/index.html
@@ -190,6 +190,7 @@
 
     <!-- PRODUCT GUIDE CAROUSEL -->
     <section class="section">
+      <h2 class="section__title">サステナブルな暮らしのヒント</h2>
       <div class="product-guide-carousel">
         <button  class="product-guide-carousel__scroll-btn product-guide-carousel__scroll-btn--left">‹</button>
         <button class="product-guide-carousel__scroll-btn product-guide-carousel__scroll-btn--right">›</button>
