Add offer section elements and styles

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="featured-campaign/featured.css">
   <link rel="stylesheet" href="campaign-carousel/campaign-carousel.css">
   <link rel="stylesheet" href="product-guide-carousel/produce-guide-carousel.css">
+  <link rel="stylesheet" href="offers/offers.css">
   <title>IKEA (CLONE)</title>
 </head>
 <body>
@@ -90,7 +91,7 @@
     </section>
 
     <!-- CAMPAIGN CAROUSEL -->
-    <section class="section section--carousel">
+    <section class="section">
       <div class="campaign-carousel">
         <button  class="campaign-carousel__scroll-btn campaign-carousel__scroll-btn--left">‹</button>
         <button class="campaign-carousel__scroll-btn campaign-carousel__scroll-btn--right">›</button>
@@ -104,7 +105,6 @@
             <a class="campaign-item__link">→</a>
           </div>
         </div>
-
         <div class="campaign-item">
           <a class="campaign-item__banner">
             <img class="campaign-item__img" src="assets/images/living_room_horse_pillows.png">
@@ -219,6 +219,18 @@
         <div class="product-guide-item product-guide-item--meatballs">
           <a class="product-guide-item__link">サステナブルな食品</a>
         </div>
+      </div>
+    </section>
+
+    <!-- OFFERS -->
+    <section class="section">
+      <div class="offers">
+        <a class="offers__link">
+          <img src="assets/images/ikea_family_offer_japanese.png" class="offers__img">
+        </a>
+        <a class="offers__link">
+          <img src="assets/images/yellow_red_exlamation.png" class="offers__img">
+        </a>
       </div>
     </section>
   </main>
